# OpenAgentSeal

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.en.md  README.md  VERSION.md  build.py  create_icon.py  launcher.py  open_agent.spec  pyproject.toml  run.py  start.bat  start.sh
docs/: Info.md  Plan.md  agent_team.md  knowledge_base_implementation_guide.md  sub_agent_design.md  sub_agent_example.md  task_queue_design.md  team_architecture_design.md  web_ui_design.md
docs/images/: banner.avif
open_agent/: __init__.py  __main__.py  agent.py  agent_service.py  cli.py  config.py  log_memory_worker.py  logger.py  master_agent.py  memory_manager.py  tray.py  user_config.py
open_agent/acp/: __init__.py  server.py
open_agent/app/: __init__.py  _app.py
open_agent/app/runner/: __init__.py  api.py  manager.py  models.py  repo.py  runner.py
open_agent/app/web/: index.html  package-lock.json  package.json  vite.config.ts
open_agent/app/web/src/: App.vue  style.css
open_agent/config/: config-example.yaml  mcp-example.json  system_prompt.md
open_agent/llm/: anthropic_client.py  llm_wrapper.py  openai_client.py
open_agent/schema/: __init__.py
open_agent/task_queue/: __init__.py  dispatcher.py  queue.py  task.py  worker.py
open_agent/tools/: __init__.py  bash_tool.py  choice_tool.py  config_watcher.py  mcp_loader.py  note_tool.py  skill_tool.py  web_search.py
open_agent/utils/: __init__.py  path_utils.py
scripts/: setup-config.ps1  setup-config.sh
tests/: test_acp.py  test_agent.py  test_bash_tool.py  test_draw_flow.py  test_integration.py  test_llm.py  test_llm_clients.py  test_log_memory_worker.py  test_markdown_links.py  test_mcp.py  test_memory_manager.py  test_note_tool.py  test_session_integration.py  test_skill_loader.py  test_skill_tool.py  test_task_queue.py  test_terminal_utils.py  test_tool_schema.py  test_tools.py
(+27 files in other folders)
